src/snapshots/geometrid__shape__tests__Domino.snap
---
source: src/shape.rs
expression: outline
---
[
    RelativeCoordinate {
        x: 0,
        y: -1,
    },
    RelativeCoordinate {
        x: 1,
        y: -1,
    },
    RelativeCoordinate {
        x: 1,
        y: 1,
    },
    RelativeCoordinate {
        x: 0,
        y: 1,
    },
]
