src/snapshots/geometrid__shape__tests__I pentomino rectangles.snap
---
source: src/shape.rs
expression: rectangles
---
[
    Rectangle {
        x: 0,
        y: -2,
        width: 1,
        height: 5,
    },
]
