src/snapshots/geometrid__shape__tests__I pentomino.snap
---
source: src/shape.rs
expression: outline
---
[
    RelativeCoordinate {
        x: 0,
        y: -2,
    },
    RelativeCoordinate {
        x: 1,
        y: -2,
    },
    RelativeCoordinate {
        x: 1,
        y: 3,
    },
    RelativeCoordinate {
        x: 0,
        y: 3,
    },
]
