src/snapshots/geometrid__shape__tests__L pentomino rectangles.snap
---
source: src/shape.rs
expression: rectangles
---
[
    Rectangle {
        x: 0,
        y: 1,
        width: 2,
        height: 1,
    },
    Rectangle {
        x: 0,
        y: -2,
        width: 1,
        height: 3,
    },
]
