src/snapshots/geometrid__shape__tests__N pentomino rectangles.snap
---
source: src/shape.rs
expression: rectangles
---
[
    Rectangle {
        x: -1,
        y: 0,
        width: 1,
        height: 2,
    },
    Rectangle {
        x: 0,
        y: -2,
        width: 1,
        height: 3,
    },
]
