src/snapshots/geometrid__shape__tests__N pentomino.snap
---
source: src/shape.rs
expression: outline
---
[
    RelativeCoordinate {
        x: -1,
        y: 0,
    },
    RelativeCoordinate {
        x: 0,
        y: 0,
    },
    RelativeCoordinate {
        x: 0,
        y: -2,
    },
    RelativeCoordinate {
        x: 1,
        y: -2,
    },
    RelativeCoordinate {
        x: 1,
        y: 1,
    },
    RelativeCoordinate {
        x: 0,
        y: 1,
    },
    RelativeCoordinate {
        x: 0,
        y: 2,
    },
    RelativeCoordinate {
        x: -1,
        y: 2,
    },
]
